fix calendar now line being covered by events

--- a/app/calendar/CalendarNowLine.styl
+++ b/app/calendar/CalendarNowLine.styl
@@ -5,4 +5,4 @@
 	position: absolute
 	left: 0
 	pointer-events: none
-	z-index: 2
+	z-index: 3
